Fix sonar cube complaints